# mobile_3D_Reconstruction

./: CMakeLists.txt  GetHomography.cpp  README.md  README.md~  include.h
CV_Apps/CVApps/: AppDelegate.h  AppDelegate.m  GetFramesViewController.h  GetFramesViewController.mm  Trial2.cpp  Trial2.hpp  VideoCaptureViewController.h  VideoCaptureViewController.mm  ViewController.h  ViewController.mm  bundle_ios.cpp  main.m
CV_Apps/CVApps.xcodeproj/: project.pbxproj
CV_Apps/CVApps.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CV_Apps/CVApps.xcodeproj/project.xcworkspace/xcuserdata/aishanourait.xcuserdatad/: UserInterfaceState.xcuserstate
CV_Apps/CVApps.xcodeproj/project.xcworkspace/xcuserdata/arait.xcuserdatad/: UserInterfaceState.xcuserstate
CV_Apps/CVApps.xcodeproj/project.xcworkspace/xcuserdata/mohitsharma.xcuserdatad/: UserInterfaceState.xcuserstate
CV_Apps/CVApps.xcodeproj/xcuserdata/aishanourait.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
CV_Apps/CVApps.xcodeproj/xcuserdata/aishanourait.xcuserdatad/xcschemes/: CVApps.xcscheme  xcschememanagement.plist
CV_Apps/CVApps.xcodeproj/xcuserdata/arait.xcuserdatad/xcschemes/: CVApps.xcscheme
CV_Apps/CVApps.xcodeproj/xcuserdata/mohitsharma.xcuserdatad/xcschemes/: CVApps.xcscheme
CV_Apps/CVApps/Base.lproj/: Main.storyboard
CV_Apps/CVApps/armadillo_bits/: config.hpp
CV_Apps/CVAppsTests/: CVAppsTests.m  buildFramework.py
CV_Apps/CVAppsUITests/: CVAppsUITests.m
images/: Schedule
src/: bundle_ios.cpp  bundle_trial.cpp  bundle_trial_ceres.cpp
